--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "WebAphoneConnection": "Server=PHUT\\MSSQLSERVER01;Database=XayDungWebAphone;Trusted_Connection=True;TrustServerCertificate=true;"
+    "WebAphoneConnection": "Server=LAPTOP-5IN00FKJ\\SQLEXPRESS02;Database=XayDungWebAPhone;Trusted_Connection=True;TrustServerCertificate=true;"
   },
 
   "Logging": {
@@ -10,8 +10,5 @@
     }
   },
   "AllowedHosts": "*"
-
-
-
-
+    
 }
